@startuml

title __ADAPTERS's Class Diagram__\n

  namespace ru.omegapps.wisherapp {
    namespace adapters {
      class ru.omegapps.wisherapp.adapters.WishBlockRecycleAdapter {
          ~ context : Context
          ~ wishBlockTypeId : int
          - wishBlocks : ArrayList<WishBlock>
          + WishBlockRecycleAdapter()
          + WishBlockRecycleAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace ru.omegapps.wisherapp {
    namespace adapters {
      class ru.omegapps.wisherapp.adapters.WishBlockRecycleAdapter.WishBlockViewHolder {
          ~ isChosen : boolean
          ~ privacyTag : TextView
          ~ tagGroup : TagGroup
          ~ wishText : TextView
          + onClick()
          + onLongClick()
          ~ WishBlockViewHolder()
          ~ WishBlockViewHolder()
      }
    }
  }
  

  namespace ru.omegapps.wisherapp {
    namespace adapters {
      class ru.omegapps.wisherapp.adapters.WishRecycleAdapter {
          ~ context : Context
          - wishes : ArrayList<Wish>
          + WishRecycleAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace ru.omegapps.wisherapp {
    namespace adapters {
      class ru.omegapps.wisherapp.adapters.WishRecycleAdapter.WishViewHolder {
          ~ wishText : TextView
          ~ wishTitle : TextView
          + WishViewHolder()
          + onClick()
          + onLongClick()
          ~ WishViewHolder()
      }
    }
  }
  

  ru.omegapps.wisherapp.adapters.WishBlockRecycleAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  ru.omegapps.wisherapp.adapters.WishBlockRecycleAdapter o-- ru.omegapps.wisherapp.interfaces.OnMyItemClickListener : onMyItemClickListener
  ru.omegapps.wisherapp.adapters.WishBlockRecycleAdapter o-- ru.omegapps.wisherapp.interfaces.OnMyItemLongClickListener : onMyItemLongClickListener
  ru.omegapps.wisherapp.adapters.WishBlockRecycleAdapter +-down- ru.omegapps.wisherapp.adapters.WishBlockRecycleAdapter.WishBlockViewHolder
  ru.omegapps.wisherapp.adapters.WishBlockRecycleAdapter.WishBlockViewHolder .up.|> android.view.View.OnClickListener
  ru.omegapps.wisherapp.adapters.WishBlockRecycleAdapter.WishBlockViewHolder .up.|> android.view.View.OnLongClickListener
  ru.omegapps.wisherapp.adapters.WishBlockRecycleAdapter.WishBlockViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  ru.omegapps.wisherapp.adapters.WishBlockRecycleAdapter.WishBlockViewHolder o-- ru.omegapps.wisherapp.interfaces.OnMyItemClickListener : onMyItemClickListener
  ru.omegapps.wisherapp.adapters.WishBlockRecycleAdapter.WishBlockViewHolder o-- ru.omegapps.wisherapp.interfaces.OnMyItemLongClickListener : onMyItemLongClickListener
  ru.omegapps.wisherapp.adapters.WishRecycleAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  ru.omegapps.wisherapp.adapters.WishRecycleAdapter o-- ru.omegapps.wisherapp.interfaces.OnMyItemClickListener : onMyItemClickListener
  ru.omegapps.wisherapp.adapters.WishRecycleAdapter o-- ru.omegapps.wisherapp.interfaces.OnMyItemLongClickListener : onMyItemLongClickListener
  ru.omegapps.wisherapp.adapters.WishRecycleAdapter +-down- ru.omegapps.wisherapp.adapters.WishRecycleAdapter.WishViewHolder
  ru.omegapps.wisherapp.adapters.WishRecycleAdapter.WishViewHolder .up.|> android.view.View.OnClickListener
  ru.omegapps.wisherapp.adapters.WishRecycleAdapter.WishViewHolder .up.|> android.view.View.OnLongClickListener
  ru.omegapps.wisherapp.adapters.WishRecycleAdapter.WishViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  ru.omegapps.wisherapp.adapters.WishRecycleAdapter.WishViewHolder o-- ru.omegapps.wisherapp.interfaces.OnMyItemClickListener : onMyItemClickListener
  ru.omegapps.wisherapp.adapters.WishRecycleAdapter.WishViewHolder o-- ru.omegapps.wisherapp.interfaces.OnMyItemLongClickListener : onMyItemLongClickListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
